fix(styles): :lipstick: fix overflow y on site wrapper

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,7 +10,6 @@
 
 body {
   color: get-color('primary');
-  display: grid;
   font-size: get-size('400');
   line-height: 1.4;
   scroll-behavior: smooth;
